syntax = "proto3";

package yandex.cloud.priv.loadtesting.v1.report.table;

import "ydb/public/api/client/yc_private/loadtesting/report/table/tables/codes.proto";
import "ydb/public/api/client/yc_private/loadtesting/report/table/tables/quantiles.proto";


option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/loadtesting/report/table;table";
option java_outer_classname = "PRTRES";

message GetReportTablesResponse {
  string job_id = 1;
  bool finished = 2;

  tables.Quantiles quantiles = 3;
  tables.Codes http_codes = 4;
  tables.Codes net_codes = 5;
}
